<resources>
    <string name="app_name">PhotoApp</string>
    <string name="photo">Фотографии</string>
    <string name="news">Новости</string>
    <string name="noTitle">БЕЗ НАЗВАНИЯ</string>
    <string name="noDescription">БЕЗ ОПИСАНИЯ</string>
    <string name="settings">Настройки</string>
    <string name="minimalAmount">Минимальное кол-во фотографий</string>
    <string name="maximumAmount">Максимальное кол-во фотографий</string>
    <string name="maxAmountError">Максимальное кол-во не может быть меньше минимального</string>
    <string name="ok">ок</string>
    <string name="minMaxErrorTitle">Минимум больше максимума!</string>
    <string name="topArticle">Топ Статья</string>
    <string name="somethingWentWrong">Что-то пошло не так :(</string>
    <string name="errorCode">Код ошибки: </string>

</resources>